src/css/imports/custom-utilities.css
.transition-page {
  transition: 0.33s opacity cubic-bezier(0.550, 0.055, 0.675, 0.190);
  transition-delay: 0s;
  opacity: 1;
}

html.is-animating .transition-page{
  opacity: 0;
}

.transition-nav {
  transition: 0.15s;
  transition-delay: 0.15s;
  opacity: 1;
}

html.is-animating .transition-nav{
  opacity: 0;
}


/* background loader */
html.is-changing #loader {
  opacity: 1;
}
#loader {
  background: linear-gradient(to right, #eee 0%, #e4e4e4 40%, #eee 80%);
  background-size: 400px 400px;
  animation-name: loading-pulse;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  animation-fill-mode: forwards;
  opacity: 0;
  transition: 0.33s opacity cubic-bezier(0.550, 0.055, 0.675, 0.190);
}

@keyframes loading-pulse {
  0%{
    background-position:-400px 0%;
  }
  100%{
    background-position:400px 0%;
  }
}

figure #mask-bg svg {
  display: block;
}
figure #mask-bg rect {
  opacity: 1;
}
figure #mask-bg path {
  transform: translateX(50%) translateX(-150px) translateY(50%) translateY(-170px);
}

/* collections header and loader */
header img {
  position: fixed;
  will-change: transform;
  width: 100%;
  z-index: -1;
}
header #mask svg {
  display: block;
}
header #mask rect {
  opacity: 1;
}
header #mask path {
  transform: translateX(50%) translateX(-150px) translateY(50%) translateY(-170px);
}
header rect.cover {
  opacity: 1;
  transition: 1s opacity ease-in-out;
  transition-delay: 1.66s;
}
header.lazyloaded rect.cover {
  opacity: 0;
}

#project-header {
  transition: 0.33s opacity cubic-bezier(0.550, 0.055, 0.675, 0.190);
  transition-delay: 0.66s;
  opacity: 0;
} 

img {
  transition: 0.33s opacity cubic-bezier(0.550, 0.055, 0.675, 0.190);
  transition-delay: 0.66s;
  opacity: 1;
  max-width: 100%;
  height: auto;
}

img.lazyload {
  opacity: 0;
}

img.lazyloaded, #project-header.lazyloaded, img.pswp__img  {
  opacity: 1;
}


.block-hover figcaption {
  opacity: 0;
  transition: 0.33s opacity cubic-bezier(0.550, 0.055, 0.675, 0.190);
}
.block-hover article:hover figcaption {
  opacity: 1;
}

.block-hover img {
  transition: 0.33s opacity cubic-bezier(0.550, 0.055, 0.675, 0.190);
  transition-delay: 0s;
}

.group-hover:hover > .block-hover img {
  opacity: 0;
}

.group-hover:hover > .block-hover:hover img {
  opacity: 1;
}

@responsive {
  .border-box {
    box-sizing: border-box;
  }
  .content-box {
    box-sizing: content-box;
  }
  .vh-20 {
    height: 20vh;
  }
  .vh-25 {
    height: 25vh;
  }
  .vh-33 {
    height: 33vh;
  }
  .vh-50 {
    height: 50vh;
  }
  .vh-75 {
    height: 75vh;
  }
  .vh-80 {
    height: 80vh;
  }
  .vh-90 {
    height: 90vh;
  }
  .vh-screen {
    height: 100vh;
  }
}

